{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 37,
  "lineage": "400e0a69-d323-2078-ab12-7ec8b81abf17",
  "resources": [
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:security-group/sg-0a6c601de2cc53c84",
            "description": "Control traffic to/from RDS Aurora ex-postgresql",
            "egress": [],
            "id": "sg-0a6c601de2cc53c84",
            "ingress": [],
            "name": "ex-postgresql-20230510053420199500000003",
            "name_prefix": "ex-postgresql-",
            "owner_id": "667182699765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_example",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.33.0.0/28"
            ],
            "description": "Egress to corporate printer closet",
            "from_port": 5432,
            "id": "sgrule-2485159056",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a6c601de2cc53c84",
            "security_group_rule_id": "sgr-0bc76a66402d9961c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aurora.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "vpc_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.3.0/24",
              "10.0.4.0/24",
              "10.0.5.0/24"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1116404204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a6c601de2cc53c84",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aurora.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:network-acl/acl-0bceefbbb96552ee4",
            "default_network_acl_id": "acl-0bceefbbb96552ee4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bceefbbb96552ee4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "667182699765",
            "subnet_ids": [
              "subnet-01bbf61cae60da39c",
              "subnet-0268ca656f102eadf",
              "subnet-05d30f402f074ec1b",
              "subnet-067e44c5cd5320178",
              "subnet-06dace4e0274ac969",
              "subnet-08677878fda214d0a",
              "subnet-0bb1ed6668f49bc52",
              "subnet-0f8e691559779a3b3",
              "subnet-0f9e800f80ba1cc41"
            ],
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-default"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-default"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:route-table/rtb-0dc5622330d34208a",
            "default_route_table_id": "rtb-0dc5622330d34208a",
            "id": "rtb-0dc5622330d34208a",
            "owner_id": "667182699765",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-default"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:security-group/sg-0f18b2629d4f220ff",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f18b2629d4f220ff",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "667182699765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-default"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-default"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:internet-gateway/igw-0eac17141decd5815",
            "id": "igw-0eac17141decd5815",
            "owner_id": "667182699765",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eac17141decd5815",
            "id": "r-rtb-0eeee4165822886ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eeee4165822886ca",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:route-table/rtb-0bba5a219d3c58e34",
            "id": "rtb-0bba5a219d3c58e34",
            "owner_id": "667182699765",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1a"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:route-table/rtb-046f2ce20f81a08a3",
            "id": "rtb-046f2ce20f81a08a3",
            "owner_id": "667182699765",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1b"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:route-table/rtb-00eeb1118eb246688",
            "id": "rtb-00eeb1118eb246688",
            "owner_id": "667182699765",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:route-table/rtb-0eeee4165822886ca",
            "id": "rtb-0eeee4165822886ca",
            "owner_id": "667182699765",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-public"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb40a45576e7d458",
            "route_table_id": "rtb-0bba5a219d3c58e34",
            "subnet_id": "subnet-05d30f402f074ec1b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f5e8bdee889365c",
            "route_table_id": "rtb-046f2ce20f81a08a3",
            "subnet_id": "subnet-06dace4e0274ac969"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea935a6cb0b5d5f1",
            "route_table_id": "rtb-00eeb1118eb246688",
            "subnet_id": "subnet-0f8e691559779a3b3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ffc657a55c8d2f1",
            "route_table_id": "rtb-0bba5a219d3c58e34",
            "subnet_id": "subnet-0bb1ed6668f49bc52"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05457f8cc68822a20",
            "route_table_id": "rtb-046f2ce20f81a08a3",
            "subnet_id": "subnet-0f9e800f80ba1cc41"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f45c9041d09c831",
            "route_table_id": "rtb-00eeb1118eb246688",
            "subnet_id": "subnet-01bbf61cae60da39c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037bb2e0881a8b8f0",
            "route_table_id": "rtb-0eeee4165822886ca",
            "subnet_id": "subnet-0268ca656f102eadf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef6a6d1778b9a4af",
            "route_table_id": "rtb-0eeee4165822886ca",
            "subnet_id": "subnet-08677878fda214d0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1ab88464758dd65",
            "route_table_id": "rtb-0eeee4165822886ca",
            "subnet_id": "subnet-067e44c5cd5320178"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-05d30f402f074ec1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d30f402f074ec1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-db-eu-west-1a"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-db-eu-west-1a"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-06dace4e0274ac969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dace4e0274ac969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-db-eu-west-1b"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-db-eu-west-1b"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-0f8e691559779a3b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8e691559779a3b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-db-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-db-eu-west-1c"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-0bb1ed6668f49bc52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb1ed6668f49bc52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1a"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1a"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-0f9e800f80ba1cc41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9e800f80ba1cc41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1b"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1b"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-01bbf61cae60da39c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bbf61cae60da39c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-private-eu-west-1c"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-0268ca656f102eadf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0268ca656f102eadf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-public-eu-west-1a"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-public-eu-west-1a"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-08677878fda214d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08677878fda214d0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-public-eu-west-1b"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-public-eu-west-1b"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:subnet/subnet-067e44c5cd5320178",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067e44c5cd5320178",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667182699765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-public-eu-west-1c"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql-public-eu-west-1c"
            },
            "vpc_id": "vpc-0730efec0113ecae5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667182699765:vpc/vpc-0730efec0113ecae5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bceefbbb96552ee4",
            "default_route_table_id": "rtb-0dc5622330d34208a",
            "default_security_group_id": "sg-0f18b2629d4f220ff",
            "dhcp_options_id": "dopt-0ddf0807784972020",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0730efec0113ecae5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc5622330d34208a",
            "owner_id": "667182699765",
            "tags": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql"
            },
            "tags_all": {
              "Example": "ex-postgresql",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-rds-aurora",
              "Name": "ex-postgresql"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}